/*
 * $Id: ChangeLog,v 1.4864 2006/03/11 12:37:07 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-03-11 23:43 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/vm/dbgentry.c
    ! Fixed uninitialized memory access.

2006-03-11 15:35 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/rtl/cstr.prg
    ! Fixed ValToPrg() and ValToPrgExp() to correctly convert strings
      with Chr( 0 / 10 / 13 ).

2006-03-11 02:30 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/rtl/tbrowse.prg
    ! Don't crash on zero-sized caches in TDataCache():FillRow().

2006-03-10 15:05 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/utils/hbextern/Makefile
  * xharbour/utils/hbrun/Makefile
    * added CT library to linked library list

  * xharbour/source/rtl/strmatch.c
    + added hb_strMatchWildExact()
    + added 3-rd parameter <lExact> to WildMatch() - when it's TRUE
      WildMatch() will check if given pattern cover the whole string.
      Without it it check if pattern is valid prefix only.

  * xharbour/source/ct/like.prg
    ! use WildMatch() with .T. 3-rd parameter - this is the CT3 LIKE()
      behavior.

  * xharbour/include/hbapi.h
  * xharbour/source/vm/cmdarg.c
  * xharbour/source/vm/mainwin.c
    + added two new functions: hb_winmainArgInit() and hb_winmainArgGet()
      to set/retrieve WinMain() parameters.

  * xharbour/source/common/hbver.c
  * xharbour/source/rtl/gtalleg/gtalleg.c
    * casting for C++ compilation

2006-03-09 17:23 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/regex.c
    ! Fixed GPF trap related to empty RegEx

2006-03-09 17:19 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include\hbextern.ch
    * Guard CT3 requests with #ifdef CT3

2006-03-09 15:36 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * bin/hb-func.sh